SERVER-16607 Agg cursor's pin needs to be cleaned up under coll lock