src/mongo/db/clientcursor.cpp
@@ -226,7 +226,7 @@ namespace mongo {
 
     ClientCursorPin::~ClientCursorPin() {
         cursorStatsOpenPinned.decrement();
-        DESTRUCTOR_GUARD( release(); );
+        release();
     }
 
     void ClientCursorPin::release() {
@@ -244,9 +244,12 @@ namespace mongo {
             // Unpin the cursor under the collection cursor manager lock.
             _cursor->cursorManager()->unpin( _cursor );
         }
+
+        _cursor = NULL;
     }
 
     void ClientCursorPin::deleteUnderlying() {
+        invariant( _cursor );
         invariant( _cursor->isPinned() );
         // Note the following subtleties of this method's implementation:
         // - We must unpin the cursor before destruction, since it is an error to destroy a pinned
